--- a/css/styles.less
+++ b/css/styles.less
@@ -1,5 +1,5 @@
 /*
- *  Web Design Primer v0.1
+ *  The Web Professional's Primer v0.2
  *  http://zacharykain.com/primer
  *  
  *  created by zachary kain (@zakkain)
