--- a/css/styles.less
+++ b/css/styles.less
@@ -20,19 +20,20 @@
         e. embedded media
         f. forms & tables
         			
-	2. core typography
+	2. site colors & branding
 	
-	3. extended typography
+	3. core typography
+	
+	4. extended typography
         a. links
         b. fixed-width & preformatted text
         c. lists
         d. semantic stress elements
         e. quotes
-        f. hyphenation
-        g. abbreviations
-		h. subscript & superscript
+        f. abbreviations
+		g. subscript & superscript
 			
-	4. grid & structure	
+	5. grid & structure	
 	
 	5. Header	
 	6. Navigation
@@ -62,8 +63,8 @@ figure, footer, header, hgroup, nav, section { display: block; }
 
 /*  c. page rendering & behavior */
 html {
-	text-rendering: optimizeLegibility; /* wacky font voodoo: http://www.aestheticallyloyal.com/public/optimize-legibility */
-
+/*	text-rendering: optimizeLegibility; /* wacky font voodoo: http://www.aestheticallyloyal.com/public/optimize-legibility */
+                                        /* NOTE: causes font rendering glitches on Android with escaped unicode characters: http://bricss.net/post/6984374395 */
 	background: transparent; /* fixes graphical glitches when using -webkit-scrollbar */
 	overflow-y: scroll; /* always show vertical scrollbar to avoid a "jump" when resizing */
 
@@ -71,6 +72,17 @@ html {
 	-webkit-font-smoothing: antialiased; /* no jaggies: http://maxvoltar.com/archive/-webkit-font-smoothing */ 
 	-webkit-text-size-adjust: 100%; /* prevent iOS text resizing on device orientation change: h5bp.com/g */
         -ms-text-size-adjust: 100%;
+}
+
+.bgdiv {
+    opacity: 0.25;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 1200px;
+    z-index: -1;
+    background-image: url(img/gridbg.png);
 }
 
 /*  d. custom text-selection colors, remove drop shadow: http://h5bp.com/i */
@@ -88,6 +100,7 @@ img {
 	-ms-interpolation-mode: bicubic; /* improve scaling images in ie: h5bp.com/d */
 	vertical-align: middle; /* h5bp.com/e */
 	border: 0;
+	height: auto; /* can help with responsive images, but be wary of unexpected behaviour */
 }
 
 /*  f. forms */		
@@ -132,9 +145,20 @@ table { border-collapse: collapse; border-spacing: 0; }
 td { vertical-align: top; }
 
 
+/*	2. site colors & branding
+============================== */
+
+@light-grid: hsla(1, 0%, 60%, 0.65);
+
+@darkest: hsl(191, 17%, 12%);
+@txt-blue: hsl(204, 39%, 68%);
+
+@dark-grid: hsla(191, 17%, 2%, 0.75);
+@light-grid: fadeout(desaturate(@txt-blue, 5%), 50%);
 
 
-/*	2. core typography
+
+/*	3. core typography
 =========================== */
 
 /*  body type: 16pt over 24 lead
@@ -151,18 +175,6 @@ body {
     font-family: @sans; /* linux- and windows-friendly default font stack: http://mky.be/fontstack */
     color: #212121;
 }
-
-.bgdiv {
-    opacity: 0.25;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 1200px;
-    z-index: -1;
-    background-image: url(img/gridbg.png);
-}
-
 
 h1, .alpha {
     font-size: 4.5em; /* 72px */
@@ -203,7 +215,7 @@ h5, .epsilon {
 	line-height: 1;	/* 48px */
 	padding: 0.125em 0 0.875em; /* 3px & 21px */
 	
-	font-weight: 600;
+	font-weight: 400;
 	font-style: italic;
 }
 
@@ -212,7 +224,7 @@ h6, .zeta {
 	line-height: 1.2; /* 24px */
 	padding: 0 0 1.2em; /* 24px */
 	
-	font-weight: 700;
+	font-weight: 600;
 }
 
 p {
@@ -229,7 +241,7 @@ h1 + p, h2 + p, pre + p {
 }
 
 
-/*	3. extended typography
+/*	4. extended typography
 =========================== */
 
 /* a. links - must be in this order! */
@@ -361,19 +373,12 @@ blockquote:before {
 	font-style: italic;
 }
 
-/*  f. hyphenation */
-p { 
-	-webkit-hyphens: auto; 
-    	-moz-hyphens: auto; 
-    	hyphens: auto; 
-}
-
-/*  g. abbreviations */
+/*  f. abbreviations */
 abbr[title] { 
 	border-bottom: 1px dotted; cursor: help; 
 }
 
-/*  h. superscript and subscript: h5bp.com/k */
+/*  g. superscript and subscript: h5bp.com/k */
 sub, sup {
     font-size: 75%; 
     line-height: 0; 
@@ -385,28 +390,31 @@ sub, sup {
 }
 
 
-/*	4. grid & structure
+/*  5. grid & structure
 ========================= */
-
-/*  
-	Grid built on Frameless by Joni Korpi: http://framelessgrid.com
-
-    gutters: 24
-    margins: 48
-    columns: 48
-        12col = 840px live width, 936px total width 
-*/
+  
+/*	grid built on 'frameless' by Joni Korpi: http://framelessgrid.com
+	------------------------------------------------------------------
+    gutters: 24px
+    margins: 48px
+    columns: 48px
+------------------
+    
+    pixel widths (excluding outer margins):
+    -------------------------------------------
+             mobile:     4 columns  ->   264px 
+        wide mobile:     6 columns  ->   408px
+             tablet:     8 columns  ->   552px
+            desktop:    12 columns  ->   936px
+         extra-wide:    16 columns  ->  1128px
+               huge:   24+ columns  ->  1704px
+-----------------------------------------------     */
 
 @font-size: 16; 		// Your base font-size in pixels
 @em: @font-size*1em;	// Shorthand for outputting ems, e.g. "12/@em"
 
 @column: 48;	// The column-width of your grid in pixels
 @gutter: 24;	// The gutter-width of your grid in pixels
-
-
-//
-// Column-widths in variables, in ems
-//
 
  @1cols: ( 1 * (@column + @gutter) - @gutter) / @em; @1col: @1cols;
  @2cols: ( 2 * (@column + @gutter) - @gutter) / @em;
@@ -429,38 +437,43 @@ sub, sup {
 	width: (@cols * (@column + @gutter) - @gutter) / @em;
 }
 
-html { height: 100%; }
-body { min-height: 100%; background: hsl(1, 0%, 90%);}
+html { 
+    height: 100%; 
+}
 
-#wrap {
-/*     background-color: hsl(1, 0%, 70%); */
+body { 
+    min-height: 100%; /* get rid of #wrap divs forever: http://camendesign.com/code/developpeurs_sans_frontieres */
+    background: hsl(1, 0%, 90%);
+}
+
+section {
+    background: hsla(1, 0%, 96%, 0.5);
     
 	padding: 0 24/@em;
 	margin: 0 auto;
 	max-width: @12cols;
-	padding-bottom: 50em;
 }
 
 #grid {
-	height: @4cols;
+	height: @1cols;
 	position: relative;
 	overflow: hidden;
 }
 
 	.col {
-		background: grey;
+		background: @light-grid;
 		height: 100%;
 		width: @1col;
 		position: absolute;
-		left: 50%; top: 0;
-		margin-left: 12/@em;
+		left: 50%; top: 0; /* centres all the columns in the middle*/
+		margin-left: 12/@em; /* pushes them half of the gutter to the right */
 	}
 	
 	#grid .col {
-		-webkit-transition: background-color 0.382s ease-out;
+		-webkit-transition: all 0.382s ease-out;
 	}
 		
-		.col2 {margin-left: (1*72+12)/@em;}
+		.col2 {margin-left: (1*72+12)/@em;} /* adds more left margin to push right, equal to the column size plus the gutter (48 + 24 = 72) plus 12 to make up half of the middle gutter */
 		.col3 {margin-left: (2*72+12)/@em;}
 		.col4 {margin-left: (3*72+12)/@em;}
 		.col5 {margin-left: (4*72+12)/@em;}
@@ -477,7 +490,7 @@ body { min-height: 100%; background: hsl(1, 0%, 90%);}
 		.col16 {margin-left: (15*72+12)/@em;}
 		.col17 {margin-left: (16*72+12)/@em;}
 		.col18 {margin-left: (17*72+12)/@em;}
-		.col19 {margin-left: -(1*72-12)/@em;}
+		.col19 {margin-left: -(1*72-12)/@em;} /* adds a NEGATIVE left margin to push left, equal to the column size plus the gutter (48 + 24 = 72) plus 12 to make up half of the middle gutter */
 		.col20 {margin-left: -(2*72-12)/@em;}
 		.col21 {margin-left: -(3*72-12)/@em;}
 		.col22 {margin-left: -(4*72-12)/@em;}
@@ -495,175 +508,108 @@ body { min-height: 100%; background: hsl(1, 0%, 90%);}
 		.col34 {margin-left: -(16*72-12)/@em;}
 		.col35 {margin-left: -(17*72-12)/@em;}
 		.col36 {margin-left: -(18*72-12)/@em;}
+
 		
-		.col1, .col2, .col3, .col4, .col19, .col20, .col21, .col22 {
-			background: black;
-		}
-
-
-@media screen and (max-width: 16.875em) {	
-
-	section {
-		padding-left: 10/@em;
-		padding-right: 10/@em;
-	}
-}
-
-@media screen and (max-width: 19.9375em) {
-
-}
-
-@media 
-	screen and (min-width: 32.5em) and (max-width: 37.4375em),
-	screen and (min-width: 45em) and (max-width: 56.9375em),
-	screen and (min-width: 77.5em) and (max-width: 102.4375em),
-	screen and (min-width: 135em) {
-}
-
-
-
-/*
-	Mobile layout 
+/*  Mobile layout 
 	240–479 px
-	Zoomed out below 320 px
-*/
-
-@media screen and (min-width: 15em) {
-	
-    section {
-		width: @4cols;
-		max-width: none;
-		padding-left: 0;
-		padding-right: 0;
-	}
-	
-	.col3, .col4, .col21, .col22 {
-		background: black;
-	}
-	
+*/  @media screen and (min-width: 15em) 
+{	
+        section {
+    		width: @4cols;
+    		max-width: none;
+    		padding-left: 0;
+    		padding-right: 0;
+    		text-align: center;
+    	}
+    	
+    	section h1, section h2, section h3, section h4, section h5, section h6 {
+    	   display: inline;
+    	}
+    	
+    	.col1, .col2, .col19, .col20 {
+    		background: @dark-grid;
+    	}	
 }
 
+/*  Wide Mobile layout 
+	480 - 767px
+*/  @media screen and (min-width: 30em) 
+{	
+        section {
+            width: @6cols;
+    		display: block;
+    	}	
 
-/*
-	Wide mobile layout 
-	480-767 px
-	Zoomed in above 480 px
-*/
-
-@media screen and (min-width: 30em) {
-	
-	section {
-		width: @6cols;
-	}
-	
-	section {
-		display: block;
-	}
-	
-	#grid {
-		height: @3cols;
-	}
-	
-		.col3, .col21 {
-			background: black;
-		}
+    	section h1, section h2, section h3, section h4, section h5, section h6 {
+    	   display: block;
+    	}
+    	
+    	.col3, .col21 {
+    	   background: @dark-grid;
+    	}
 }
 
-
-/*
-	Tablet layout 
-	600-911 px
-	Zoomed in above 600 px
-*/
-
-@media screen and (min-width: 37.5em) {
-	
-	section {
-		width: @8cols;
-
+/*  Tablet layout 
+	600 - 911px
+*/  @media screen and (min-width: 37.5em) 
+{	
+        section {
+            width: @8cols;
 		text-align: left;
 		position: relative;
-	}	
-		
-	#grid {
-		height: @5cols;
-	}
-	
-		.col4, .col22 {
-			background: black;
-		}
+    	}	
+    	
+    	.col4, .col22 {
+    	   background: @dark-grid;
+    	}
 }
 
-
-/*
-	Widescreen layout 
-	912-1887 px
-	Zoomed in above 912 px
-*/
-
-@media screen and (min-width: 57em) {
-	
-	section {
-		width: @12cols;
-	}
-	
-	#grid {
-		height: @6cols;
-	}
-	
-		.col5, .col6, 
+/*  Desktop layout 
+	912 - 1272px
+*/  @media screen and (min-width: 57em) 
+{	
+        section {
+            width: @12cols;
+    	}	
+    	
+    	.col5, .col6, 
 		.col23, .col24 {
-			background: black;
-		}
+    	   background: @dark-grid;
+    	}
+}
+
+/*  Extra-Wide layout 
+	1272 - 1888px
+*/  @media screen and (min-width: 79.5em) 
+{	
+        section {
+            width: @16cols;
+    	}	
+    	
+    	.col7, .col8, 
+		.col25, .col26 {
+    	   background: @dark-grid;
+    	}
 }
 
 /*
-	Huge-screen layout 
-	1888-2520 px
-	Zoomed in above 1920 px
-*/
-
-@media screen and (min-width: 118em) {
-
-	section {
-		width: @13cols+@13cols+(24/@em);
-		margin-left: auto;
-		margin-right: auto;
-	}
-	#grid {
-		height: @10cols;
-	}
-	
-		.col7, .col8, .col9, .col10, .col11, .col12, .col13,
-		.col25, .col26, .col27, .col28, .col29, .col30, .col31 {
-			background: black;
-		}	
+	Huge layout 
+	1888 - 2520px
+*/  @media screen and (min-width: 118em) 
+{	
+        section {
+    		width: @13cols+@13cols+(24/@em);
+    		margin-left: auto;
+    		margin-right: auto;
+    	}	
+    	
+    	.col9, .col10, .col11, .col12, .col13 
+		.col25, .col26, .col27, .col28, .col29 {
+    	   background: @dark-grid;
+    	}
 }
 
 
-
-
-
-
-
-
-
-
-/* ==|== media queries ======================================================
-   PLACEHOLDER Media Queries for Responsive Design.
-   These override the primary ('mobile first') styles
-   Modify as content requires.
-   ========================================================================== */
-
-@media only screen and (min-width: 480px) {
-  /* Style adjustments for viewports 480px and over go here */
-
-}
-
-@media only screen and (min-width: 768px) {
-  /* Style adjustments for viewports 768px and over go here */
-
-}
 
 /* ==|== non-semantic helper classes ========================================
    Please define your styles before this section.
@@ -691,55 +637,14 @@ body { min-height: 100%; background: hsl(1, 0%, 90%);}
 .clearfix { *zoom: 1; }
 
 
-img{
-    max-width:100%;
-    height:auto;
-}
 
-
-
-/* ==|== print styles =======================================================
-   Print styles.
-   Inlined to avoid required HTTP connection: h5bp.com/r
-   ========================================================================== */
-
-@media print {
-  * { background: transparent !important; color: black !important; box-shadow:none !important; text-shadow: none !important; filter:none !important; -ms-filter: none !important; } /* Black prints faster: h5bp.com/s */
-  a, a:visited { text-decoration: underline; }
-  a[href]:after { content: " (" attr(href) ")"; }
-  abbr[title]:after { content: " (" attr(title) ")"; }
-  .ir a:after, a[href^="javascript:"]:after, a[href^="#"]:after { content: ""; }  /* Don't show links for images, or javascript/internal links */
-  pre, blockquote { border: 1px solid #999; page-break-inside: avoid; }
-  thead { display: table-header-group; } /* h5bp.com/t */
-  tr, img { page-break-inside: avoid; }
-  img { max-width: 100% !important; }
-  @page { margin: 0.5cm; }
-  p, h2, h3 { orphans: 3; widows: 3; }
-  h2, h3 { page-break-after: avoid; }
-}
-
-
-/*
-	Typekit failsafe
-*/
-
-
-
-h1, h2, h3, h4, h5, h6, p, li {
+/* typekit fout-buster: http://jonikorpi.com/a-smoother-page-load */
+.wf-active {
     opacity: 1;
     -webkit-transition: opacity 0.24s ease-in-out;
        -moz-transition: opacity 0.24s ease-in-out;
             transition: opacity 0.24s ease-in-out;
 }
-
-
-.wf-loading h1, 
-.wf-loading h2, 
-.wf-loading h3,
-.wf-loading h4,
-.wf-loading h5,
-.wf-loading h6, 
-.wf-loading p, 
-.wf-loading li {
+.wf-loading {
     opacity: 0;
 }
