remove syntax highlighting

--- a/css/styles.less
+++ b/css/styles.less
@@ -271,7 +271,7 @@ pre {
     position: relative;
     font-size: 0.75em; /* 12px */
     line-height: 2; /* 24px */
-    padding: 2em; /* 24px */
+    padding: 0; /* 24px */
 
     background: #192223;  /* fallback for browsers that don't support hsl */
     background: hsl(191, 17%, 12%);
@@ -281,7 +281,7 @@ pre {
 	-webkit-font-smoothing: subpixel-antialiased;
 }
 /* display the language with a class name on the <code> element: http://perishablepress.com/press/2009/11/09/perfect-pre-tags/ */
-pre code[class]:before { content: 'language: ' attr(class); color: hsl(204, 39%, 85%); }
+/* pre code[class]:before { content: 'language: ' attr(class); color: hsl(204, 39%, 85%); } */
 
 p code {
     font-size: 0.875em;
