--- a/css/styles.less
+++ b/css/styles.less
@@ -35,7 +35,7 @@
 			
 	5. grid & structure
 	   a. set up variables for the grid layout
-	   b. grid-specific structural styles	
+	   b. styles shared across all sizes	
 	
 	5. Header	
 	6. Navigation
@@ -73,7 +73,7 @@ html {
 	-webkit-text-size-adjust: 100%; /* prevent iOS text resizing on device orientation change: h5bp.com/g */
         -ms-text-size-adjust: 100%;
         
-    /*	text-rendering: optimizeLegibility; /* wacky font voodoo: http://www.aestheticallyloyal.com/public/optimize-legibility */
+/*     	text-rendering: optimizeLegibility; /* wacky font voodoo: http://www.aestheticallyloyal.com/public/optimize-legibility */
         /* NOTE: causes font rendering glitches on Android with escaped unicode characters: http://bricss.net/post/6984374395 */
 }
 
@@ -160,8 +160,8 @@ td { vertical-align: top; }
         http://modularscale.com/scale/?px1=16&px2=72&ra1=1.5&ra2=0
     */
 
-@serif: calluna-1, calluna-2, Georgia, serif;
 @sans: calluna-sans-1, calluna-sans-2, Helmet, Freesans, sans-serif;
+@serif: adelle-1, adelle-2, Georgia, serif;
 
 body {	
     font-size: 1em; /* 16px */
@@ -240,7 +240,7 @@ h1 + p, h2 + p, pre + p {
 
 /* a. links - must be in this order! */
 a { color: #00e; }
-a:visited { color: #551a8b; }
+a:visited { color: @light-grid; }
 a:hover { color: #06e; }
 a:active {color: #06e; }
 
@@ -270,7 +270,6 @@ pre {
     font-size: 0.75em; /* 12px */
     line-height: 2; /* 24px */
     padding: 0;
-    margin-left: 2em;
 
     background: #192223;  /* fallback for browsers that don't support hsl */
     background: hsl(191, 17%, 12%);
@@ -434,12 +433,12 @@ sub, sup {
     @15cols: (15 * (@column + @gutter) - @gutter) / @em;
     @16cols: (16 * (@column + @gutter) - @gutter) / @em;
 
-#grid {
-	height: @1cols;
-	position: relative;
-	overflow: hidden;
-}
-
+    #grid {
+    	height: (@1cols / 2);
+    	position: relative;
+    	overflow: hidden;
+    }
+    
 	.col {
 		background: @light-grid;
 		height: 100%;
@@ -447,153 +446,222 @@ sub, sup {
 		position: absolute;
 		left: 50%; top: 0; /* centres all the columns in the middle*/
 		margin-left: 12/@em; /* pushes them half of the gutter to the right */
+	   &.fixed {
+	       height: 100%;
+	   }
 	}
-	
-	#grid .col {
-		-webkit-transition: all 0.382s ease-out;
-	}
+        .fixed {
+            position: fixed;
+        	z-index: 1;
+        }
+ 	
+    #grid .col { -webkit-transition: all 0.382s ease-out; }
 		
-		.col2 {margin-left: (1*72+12)/@em;} /* adds more left margin to push right, equal to the column size plus the gutter (48 + 24 = 72) plus 12 to make up half of the middle gutter */
-		.col3 {margin-left: (2*72+12)/@em;}
-		.col4 {margin-left: (3*72+12)/@em;}
-		.col5 {margin-left: (4*72+12)/@em;}
-		.col6 {margin-left: (5*72+12)/@em;}
-		.col7 {margin-left: (6*72+12)/@em;}
-		.col8 {margin-left: (7*72+12)/@em;}
-		.col9 {margin-left: (8*72+12)/@em;}
-		.col10 {margin-left: (9*72+12)/@em;}
-		.col11 {margin-left: (10*72+12)/@em;}
-		.col12 {margin-left: (11*72+12)/@em;}
-		.col13 {margin-left: (12*72+12)/@em;}
-		.col14 {margin-left: (13*72+12)/@em;}
-		.col15 {margin-left: (14*72+12)/@em;}
-		.col16 {margin-left: (15*72+12)/@em;}
-		.col17 {margin-left: (16*72+12)/@em;}
-		.col18 {margin-left: (17*72+12)/@em;}
-		.col19 {margin-left: -(1*72-12)/@em;} /* adds a NEGATIVE left margin to push left, equal to the column size plus the gutter (48 + 24 = 72) plus 12 to make up half of the middle gutter */
-		.col20 {margin-left: -(2*72-12)/@em;}
-		.col21 {margin-left: -(3*72-12)/@em;}
-		.col22 {margin-left: -(4*72-12)/@em;}
-		.col23 {margin-left: -(5*72-12)/@em;}
-		.col24 {margin-left: -(6*72-12)/@em;}
-		.col25 {margin-left: -(7*72-12)/@em;}
-		.col26 {margin-left: -(8*72-12)/@em;}
-		.col27 {margin-left: -(9*72-12)/@em;}
-		.col28 {margin-left: -(10*72-12)/@em;}
-		.col29 {margin-left: -(11*72-12)/@em;}
-		.col30 {margin-left: -(12*72-12)/@em;}
-		.col31 {margin-left: -(13*72-12)/@em;}
-		.col32 {margin-left: -(14*72-12)/@em;}
-		.col33 {margin-left: -(15*72-12)/@em;}
-		.col34 {margin-left: -(16*72-12)/@em;}
-		.col35 {margin-left: -(17*72-12)/@em;}
-		.col36 {margin-left: -(18*72-12)/@em;}
+        .col2 {margin-left: (1*72+12)/@em;} /* adds more left margin to push right, equal to the column size plus the gutter (48 + 24 = 72) plus 12 to make up half of the middle gutter */
+        .col3 {margin-left: (2*72+12)/@em;}
+        .col4 {margin-left: (3*72+12)/@em;}
+        .col5 {margin-left: (4*72+12)/@em;}
+        .col6 {margin-left: (5*72+12)/@em;}
+        .col7 {margin-left: (6*72+12)/@em;}
+        .col8 {margin-left: (7*72+12)/@em;}
+        .col9 {margin-left: (8*72+12)/@em;}
+        .col10 {margin-left: (9*72+12)/@em;}
+        .col11 {margin-left: (10*72+12)/@em;}
+        .col12 {margin-left: (11*72+12)/@em;}
+        .col13 {margin-left: (12*72+12)/@em;}
+        .col14 {margin-left: (13*72+12)/@em;}
+        .col15 {margin-left: (14*72+12)/@em;}
+        .col16 {margin-left: (15*72+12)/@em;}
+        .col17 {margin-left: (16*72+12)/@em;}
+        .col18 {margin-left: (17*72+12)/@em;}
+        .col19 {margin-left: -(1*72-12)/@em;} /* adds a NEGATIVE left margin to push left, equal to the column size plus the gutter (48 + 24 = 72) plus 12 to make up half of the middle gutter */
+        .col20 {margin-left: -(2*72-12)/@em;}
+        .col21 {margin-left: -(3*72-12)/@em;}
+        .col22 {margin-left: -(4*72-12)/@em;}
+        .col23 {margin-left: -(5*72-12)/@em;}
+        .col24 {margin-left: -(6*72-12)/@em;}
+        .col25 {margin-left: -(7*72-12)/@em;}
+        .col26 {margin-left: -(8*72-12)/@em;}
+        .col27 {margin-left: -(9*72-12)/@em;}
+        .col28 {margin-left: -(10*72-12)/@em;}
+        .col29 {margin-left: -(11*72-12)/@em;}
+        .col30 {margin-left: -(12*72-12)/@em;}
+        .col31 {margin-left: -(13*72-12)/@em;}
+        .col32 {margin-left: -(14*72-12)/@em;}
+        .col33 {margin-left: -(15*72-12)/@em;}
+        .col34 {margin-left: -(16*72-12)/@em;}
+        .col35 {margin-left: -(17*72-12)/@em;}
+        .col36 {margin-left: -(18*72-12)/@em;}
 
 
-
-/*  b. grid-specific structural styles */
-html { height: 100%; }
-
-body { 
-    min-height: 100%; /* get rid of #wrap divs forever: http://camendesign.com/code/developpeurs_sans_frontieres */
-    background: hsl(1, 0%, 90%);
+/*  b. styles shared across all sizes */		
+html { 
+    height: 100%;
 }
-		
-		
-header {
-/* 	padding: 0 24/@em; */
-	margin: 0 auto;
-/* 	max-width: @12cols; */
+    body {  
+        min-height: 100%; /* get rid of #wrap divs forever: http://camendesign.com/code/developpeurs_sans_frontieres */
+        background: hsl(1, 0%, 90%);
+    }		
 
-    background: hsla(1, 0%, 96%, 0.5);
-    outline: 1px solid hsla(1, 0%, 80%, 0.65);
+header, section {
+	margin: 0 auto;
+
+    background: hsla(1, 0%, 96%, .51);
+    outline: 1px solid hsla(1, 0%, 80%, 0.75);
+}
+
+header {
+    letter-spacing: -4px;
+} 
+
+.topbar {
+    height: (@1col / 2);
+    background-color: @dark-grid;
+    z-index: 5;
+}
+
+.kicker {
+    .epsilon;
+    display: inline-block;
+    max-width: (( 10 * (@column + @gutter) * 0.66666666667) - @gutter * 0.66666666667) / @em;
+    padding: 0 0 1em;   
+    margin-left: @1col;
+    margin-right: (( 1 * (@column + @gutter) * 0.66666666667) + @gutter * 0.66666666667) / @em;
+
+    letter-spacing: normal;
+    text-align: justify;
+    text-rendering: optimizeLegibility;
+    text-indent: 0;
+    font-style: normal;
+}
+
+.kicker:before {
+    content: "{"; 
+    .alpha;
+    display: block;
+    height: 0;
+    line-height: 1.18; /* 80px (off the baseline but optically correct */
+    padding: 0 0 24px; /* 24px & 24px */
+    margin-left: -0.6666666666667em; /* this is correct and proportional to the grid system */        
+            /* margin-left: -0.56em; this lines up the character EXACTLY to the gutter line */
+}
+
+nav {
+    padding: 1.5em 0;
+    max-width: @9cols;
+    margin: 0;
+    display: inline-block;
+}
+
+nav ul{
+    list-style: none;
+    margin: 0; padding: 0;
+    text-indent: 0;
+}
+
+
+nav ul li, #gridder, #baseliner {
+    letter-spacing: normal;
+    display:inline-block;
+    background: @darkest;
+    width: @3cols;
+    margin-right: @gutter/@em;
+}
+
+nav ul li:last-child, #baseliner {
+    margin-right: 0;    
+}
+
+#gridder, #baseliner {
+    z-index: 3;
+    padding: 3em 0 1.5em;
+    width: @2cols;
+    color: @txt-blue;
+    vertical-align: top;
+    margin-top: 1.5em;
 }
 
 /*
-.kicker {
-    max-width: @8cols;
-    margin: 0 auto;
+#gridder {
+    margin-right: ( 1 * (@column + @gutter) + @gutter) / @em;
 }
 */
 
-.topbar {
-    height: @1col;
-    background-color: @dark-grid;
-}
-
-nav ul{
-  list-style-type:none;
-  margin-left:0;
-}
-nav ul li{
-  display:inline;
-}
 nav ul li a{
-  display:inline-block;
+  display:block;
+    color: @txt-blue;
 }
 
-nav ul{
-  width:100%;
-  background:#eee;
-}
-nav ul li a{
-  padding:5px 10px;
+nav ul li:before {
+    content:"";
 }
 
-span.zeta {display: block;}
 
-		
+
+
+/*
+    p:before {
+        content: "\00B6 \0020";
+    }
+*/
+
 /*  Mobile layout 
 	240–479 px
 */  @media screen and (min-width: 15em) 
-{	
-        header {
+{	            
+    	.col1, .col2, .col19, .col20 {
+    		background: @dark-grid;
+    	}	
+        
+        header, section {
     		width: @4cols;
     		max-width: none;
-    		padding: 0;
+    		padding-left: 24/@em;
+    		padding-right: 24/@em;
     		margin: 0 auto;
     		text-align: center;
     	}
     	
-/*     	header h1, header h2 { display: inline; } */
-    	
     	.masthead {
-            .zeta;
+            font-size: (@font-size * 1.5)/16*1em;
     	}
-    	
-    	#grid {
-        	height: (@1cols / 2);
-        }
-    	
-    	.col1, .col2, .col19, .col20 {
-    		background: @dark-grid;
-    	}	
 }
 
 /*  Wide Mobile layout 
 	480 - 767px
 */  @media screen and (min-width: 30em) 
-{	
-        header {
-            width: @6cols;
-/*     		display: block; */
-    	}	
-  	
+{	    
     	.col3, .col21 {
     	   background: @dark-grid;
     	}
+
+        header, section {
+            width: @6cols;
+    	}	  	
 }
 
 /*  Tablet layout 
 	600 - 911px
 */  @media screen and (min-width: 37.5em) 
 {	
-        header {
-            width: @8cols;
-    	}
-    	
+        body { font-size: (@font-size - 2)/16*1em; }
+        
     	.col4, .col22 {
     	   background: @dark-grid;
+    	}
+
+        header, section {
+            width: @8cols;
+            margin-bottom: 1.5em;   
+    	   text-align: left;
+    	}
+    	    	
+    	.masthead {
+            .beta;
+    	}
+    	
+    	.kicker {
+
     	}
 }
 
@@ -601,28 +669,35 @@ span.zeta {display: block;}
 	912 - 1272px
 */  @media screen and (min-width: 57em) 
 {	
-        header {
-            width: @12cols;
-    	}	
+        body { font-size: (@font-size)/16*1em; }
 
     	.col5, .col6, 
 		.col23, .col24 {
     	   background: @dark-grid;
     	}
+        
+        header, section {
+            width: @12cols;
+    	}	
+
+    	.masthead {
+            .alpha;
+    	}  	
 }
 
 /*  Extra-Wide layout 
 	1272 - 1888px
 */  @media screen and (min-width: 79.5em) 
 {	
-        header {
-            width: @16cols;
-    	}	
-    	
     	.col7, .col8, 
 		.col25, .col26 {
     	   background: @dark-grid;
     	}
+  
+        header, section {
+            width: @16cols;
+    	}
+
 }
 
 /*
@@ -630,17 +705,29 @@ span.zeta {display: block;}
 	1888 - 2520px
 */  @media screen and (min-width: 118em) 
 {	
-        header {
+        body { font-size: (@font-size + 2)/16*1em; }
+
+    	.col9, .col10, .col11, .col12, .col13 
+		.col25, .col26, .col27, .col28, .col29 {
+    	   background: @dark-grid;
+    	}
+    
+        header, section, nav {
     		width: @13cols+@13cols+(24/@em);
     		margin-left: auto;
     		margin-right: auto;
     	}	
     	
-    	.col9, .col10, .col11, .col12, .col13 
-		.col25, .col26, .col27, .col28, .col29 {
-    	   background: @dark-grid;
-    	}
 }
+
+/*  high-dpi devices yo */
+@media only screen and (-webkit-min-device-pixel-ratio: 1.5), 
+only screen and (-o-min-device-pixel-ratio: 3/2), 
+only screen and (min-device-pixel-ratio: 1.5) 
+{
+
+}
+
 
 /* ==|== non-semantic helper classes ========================================
    Please define your styles before this section.
